# landlord-command-centre

./: .env.example  .gitignore  .replit  README.md  app.py  config.py  database.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt
docs/plans/: 2026-01-22-multi-user-auth-design.md  2026-01-22-multi-user-auth-implementation.md
parsers/: __init__.py  base.py  eicr.py  epc.py  gas_safety.py  tenancy.py
services/: __init__.py  ai_extractor.py  auth.py  google_drive.py  notifications.py  timeline.py
templates/: account.html  add_property.html  add_tenancy.html  base.html  confirm_tenancy.html  drive_scan.html  drive_settings.html  forgot_password.html  index.html  login.html  properties.html  property_detail.html  register.html  settings.html  tenancies.html  tenancy_detail.html  timeline.html  upload_tenancy.html
tests/: __init__.py  test_auth.py  test_database_users.py  test_models.py
